--- a/index.css
+++ b/index.css
@@ -19,11 +19,10 @@
   margin-top: 45px;
 }
 .restaurant-card-container {
-  padding: 33px;
   width: 300px;
   /* height: 375px; */
   margin: 2px;
-  background-color: gray;
+  background-color: rgb(225, 220, 220);
 }
 .restaurant-container {
   display: flex;
@@ -39,10 +38,33 @@
 }
 .restaurant-logo {
   width: 100%;
-  height: 135px;
 }
 .fliter-btn {
   padding: 10px;
   margin: 10px;
   cursor: pointer;
+}
+.restaurant-detail-container {
+  padding: 15px;
+}
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.shimmer-card {
+  margin: 20px;
+  height: 400px;
+  width: 300px;
+
+  background-color: rgb(225, 220, 220);
+}
+.login-btn {
+  margin-right: 60px;
+  padding: 40px;
+  cursor: pointer;
+
+}
+.fliter{
+  display: flex;
+  
 }
