--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
-.header {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* .header {
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
@@ -21,7 +25,7 @@
 .restaurant-card-container {
   width: 300px;
   /* height: 375px; */
-  margin: 2px;
+  /* margin: 2px;
   background-color: rgb(225, 220, 220);
 }
 .restaurant-container {
@@ -72,4 +76,4 @@
   padding: 10px;
   border: 1px solid black;
 
-}
+} */ 
